<resources>
    <!-- LoginPage -->
    <string name="app_name">Connexus!</string>
    <string name="action_settings">Settings</string>
    <string name="login_ads">The World\'s Greatest Photosharing App.</string>
    <string name="authors">Kaiyuan Wang (kw26528)/Xingyuan Wang</string>
    <string name="view_streams">View Streams</string>

    <!-- ViewAllStreams -->
    <string name="search_hint">Find Streams</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="my_subscribed_streams">My Subscribed Streams</string>
    <string name="title_activity_view_single_stream">ViewSingleStream</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="title_activity_near_by_photos">NearByPhotos</string>
    <string name="title_activity_subscribed_streams">SubscribedStreams</string>
    <string name="title_activity_view_all_streams">ViewAllStreams</string>
    <string name="nearby_pictures">Nearby Photos</string>
    <string name="more">More</string>
    <string name="title_activity_upload">Upload</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="use_camera">Use Camera</string>
    <string name="upload_hint">Add a message and/or tags</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_camera_preview">CameraPreview</string>
</resources>
