<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/response_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.kaiyuan_wang.mobileconnexus.Upload">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="40sp" />

        <Button
            android:id="@+id/choose_from_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_library" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="createCameraPreview"
            android:text="@string/use_camera" />

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="350dp" />

        <EditText
            android:id="@+id/upload_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_hint" />

        <Button
            android:id="@+id/upload_to_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/title_activity_upload" />

        <TextView
            android:id="@+id/stream_name_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Sign Out"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>