<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginPage">
        <TextView
            android:text="@string/app_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:paddingTop="40dp"
            android:paddingBottom = "0dp"
            android:textColor="@color/red"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:enabled="false" />

        <Button
            android:id="@+id/view_all_streams"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/view_streams"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:onClick="viewAllImages"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_ads"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:textSize="8pt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</ScrollView>
